
Table "airport" {
  "id" bigint [pk, not null]
  "name" "character varying(100)" [not null]
  "location" "character varying(100)" [not null]
}

Table "booking" {
  "id" bigint [pk, not null]
  "booking_date" timestamp [not null]
  "client_id" integer [not null]
  "booking_type_id" bigint [not null]
  "flight_id" bigint [not null]

  Indexes {
    booking_type_id [type: btree, name: "api_common_booking_booking_type_id_93a9f1e4"]
    client_id [type: btree, name: "api_common_booking_client_id_45d70a25"]
    flight_id [type: btree, name: "api_common_booking_flight_id_73064e8f"]
  }
}

Table "booking_type" {
  "id" bigint [pk, not null]
  "type" "character varying(30)" [not null]
  "price" doubleprecision
}

Table "client_groups" {
  "id" bigint [pk, not null]
  "client_id" integer [not null]
  "group_id" bigint [not null]

  Indexes {
    client_id [type: btree, name: "api_common_clientgroups_client_id_c7738a60"]
    group_id [type: btree, name: "api_common_clientgroups_group_id_d4299bf5"]
  }
}

Table "client_permissions" {
  "id" bigint [pk, not null]
  "client_id" integer [not null]
  "permission_id" bigint [not null]

  Indexes {
    client_id [type: btree, name: "api_common_clientpermissions_client_id_f3777ad3"]
    permission_id [type: btree, name: "api_common_clientpermissions_permission_id_34f5ce6d"]
  }
}

Table "flight" {
  "id" bigint [pk, not null]
  "flight_number" "character varying(10)" [unique, not null]
  "departure" timestamp [not null]
  "arrival" timestamp [not null]
  "plane_id" bigint [not null]
  "track_destination_id" bigint [not null]
  "track_origin_id" bigint [not null]

  Indexes {
    flight_number [type: btree, name: "api_common_flight_flight_number_6741596a_like"]
    plane_id [type: btree, name: "api_common_flight_plane_id_c4f423c3"]
    track_destination_id [type: btree, name: "api_common_flight_track_destination_id_8ddeafff"]
    track_origin_id [type: btree, name: "api_common_flight_track_origin_id_b0578178"]
  }
}

Table "group" {
  "id" bigint [pk, not null]
  "name" "character varying(255)" [not null]
}

Table "permission" {
  "id" bigint [pk, not null]
  "name" "character varying(255)" [not null]
}

Table "plane" {
  "id" bigint [pk, not null]
  "model" "character varying(100)" [not null]
  "second_class_capacity" integer [not null]
  "first_class_capacity" integer [not null]
}

Table "staff_groups" {
  "id" bigint [pk, not null]
  "group_id" bigint [not null]
  "staff_id" integer [not null]

  Indexes {
    group_id [type: btree, name: "api_common_staffgroups_group_id_e0190a43"]
    staff_id [type: btree, name: "api_common_staffgroups_staff_id_6f79d9e4"]
  }
}

Table "staff_permissions" {
  "id" bigint [pk, not null]
  "permission_id" bigint [not null]
  "staff_id" integer [not null]

  Indexes {
    permission_id [type: btree, name: "api_common_staffpermissions_permission_id_6bc15bf0"]
    staff_id [type: btree, name: "api_common_staffpermissions_staff_id_e48541ff"]
  }
}

Table "staff_type" {
  "id" bigint [pk, not null]
  "type" "character varying(100)" [not null]
}

Table "track" {
  "id" bigint [pk, not null]
  "track_number" "character varying(10)" [not null]
  "length" integer [not null]
  "airport_id" bigint [not null]

  Indexes {
    airport_id [type: btree, name: "api_common_track_airport_id_b845c89c"]
  }
}

Table "working" {
  "id" bigint [pk, not null]
  "flight_id" bigint [not null]
  "staff_id" integer [not null]

  Indexes {
    flight_id [type: btree, name: "api_common_working_flight_id_7c0c04f3"]
    staff_id [type: btree, name: "api_common_working_staff_id_ed5c4460"]
  }
}

Table "auth_group" {
  "id" integer [pk, not null]
  "name" "character varying(150)" [unique, not null]

  Indexes {
    name [type: btree, name: "auth_group_name_a6ea08ec_like"]
  }
}

Table "auth_group_permissions" {
  "id" bigint [pk, not null]
  "group_id" integer [not null]
  "permission_id" integer [not null]

  Indexes {
    (group_id, permission_id) [unique, name: "auth_group_permissions_group_id_permission_id_0cd325b0_uniq"]
    group_id [type: btree, name: "auth_group_permissions_group_id_b120cbf9"]
    permission_id [type: btree, name: "auth_group_permissions_permission_id_84c5c92e"]
  }
}

Table "auth_permission" {
  "id" integer [pk, not null]
  "name" "character varying(255)" [not null]
  "content_type_id" integer [not null]
  "codename" "character varying(100)" [not null]

  Indexes {
    (content_type_id, codename) [unique, name: "auth_permission_content_type_id_codename_01ab375a_uniq"]
    content_type_id [type: btree, name: "auth_permission_content_type_id_2f476e4b"]
  }
}

Table "auth_user" {
  "id" integer [pk, not null]
  "password" "character varying(128)" [not null]
  "last_login" timestamp
  "is_superuser" boolean [not null]
  "username" "character varying(150)" [unique, not null]
  "first_name" "character varying(150)" [not null]
  "last_name" "character varying(150)" [not null]
  "email" "character varying(254)" [not null]
  "is_staff" boolean [not null]
  "is_active" boolean [not null]
  "date_joined" timestamp [not null]

  Indexes {
    username [type: btree, name: "auth_user_username_6821ab7c_like"]
  }
}

Table "auth_user_groups" {
  "id" bigint [pk, not null]
  "user_id" integer [not null]
  "group_id" integer [not null]

  Indexes {
    (user_id, group_id) [unique, name: "auth_user_groups_user_id_group_id_94350c0c_uniq"]
    group_id [type: btree, name: "auth_user_groups_group_id_97559544"]
    user_id [type: btree, name: "auth_user_groups_user_id_6a12ed8b"]
  }
}

Table "auth_user_user_permissions" {
  "id" bigint [pk, not null]
  "user_id" integer [not null]
  "permission_id" integer [not null]

  Indexes {
    (user_id, permission_id) [unique, name: "auth_user_user_permissions_user_id_permission_id_14a6b632_uniq"]
    permission_id [type: btree, name: "auth_user_user_permissions_permission_id_1fbb5f2c"]
    user_id [type: btree, name: "auth_user_user_permissions_user_id_a95ead1b"]
  }
}

Table "authtoken_token" {
  "key" "character varying(40)" [pk, not null]
  "created" timestamp [not null]
  "user_id" integer [unique, not null]

  Indexes {
    key [type: btree, name: "authtoken_token_key_10f0b77e_like"]
  }
}

Table "cancellation_request" {
  "id" bigint [pk, not null]
  "request_date" timestamp [not null]
  "status" "character varying(20)" [not null]
  "reason" text
  "client_id" integer [not null]
  "flight_id" bigint [not null]

  Indexes {
    client_id [type: btree, name: "cancellation_request_client_id_56b0cac9"]
    flight_id [type: btree, name: "cancellation_request_flight_id_78dbd6a4"]
  }
}

Table "client" {
  "id" bigint [pk, not null]
  "is_staff" boolean [not null]
  "is_superuser" boolean [not null]
  "user_id" integer [unique, not null]
}

Table "django_admin_log" {
  "id" integer [pk, not null]
  "action_time" timestamp [not null]
  "object_id" text
  "object_repr" "character varying(200)" [not null]
  "action_flag" smallint [not null]
  "change_message" text [not null]
  "content_type_id" integer
  "user_id" integer [not null]

  Indexes {
    content_type_id [type: btree, name: "django_admin_log_content_type_id_c4bce8eb"]
    user_id [type: btree, name: "django_admin_log_user_id_c564eba6"]
  }
}

Table "django_content_type" {
  "id" integer [pk, not null]
  "app_label" "character varying(100)" [not null]
  "model" "character varying(100)" [not null]

  Indexes {
    (app_label, model) [unique, name: "django_content_type_app_label_model_76bd3d3b_uniq"]
  }
}

Table "django_migrations" {
  "id" bigint [pk, not null]
  "app" "character varying(255)" [not null]
  "name" "character varying(255)" [not null]
  "applied" timestamp [not null]
}

Table "django_session" {
  "session_key" "character varying(40)" [pk, not null]
  "session_data" text [not null]
  "expire_date" timestamp [not null]

  Indexes {
    expire_date [type: btree, name: "django_session_expire_date_a5c62663"]
    session_key [type: btree, name: "django_session_session_key_c0390e0f_like"]
  }
}

Table "payment_gateway" {
  "id" bigint [pk, not null]
  "gateway_response" text [not null]
  "status" "character varying(20)" [not null]
  "processed_at" timestamp [not null]
  "transaction_id" bigint [not null]

  Indexes {
    transaction_id [type: btree, name: "payment_gateway_transaction_id_2e728220"]
  }
}

Table "staff" {
  "id" bigint [pk, not null]
  "is_staff" boolean [not null]
  "is_superuser" boolean [not null]
  "staff_type_id" bigint [not null]
  "user_id" integer [unique, not null]

  Indexes {
    staff_type_id [type: btree, name: "staff_staff_type_id_8a3776c2"]
  }
}

Table "transaction" {
  "id" bigint [pk, not null]
  "amount" doubleprecision [not null]
  "transaction_date" timestamp [not null]
  "status" "character varying(20)" [not null]
  "booking_id" bigint
  "client_id" integer [not null]

  Indexes {
    booking_id [type: btree, name: "transaction_booking_id_7c43ce7e"]
    client_id [type: btree, name: "transaction_client_id_3a47ac76"]
  }
}

Ref "api_common_booking_booking_type_id_93a9f1e4_fk_api_commo":"booking_type"."id" < "booking"."booking_type_id"

Ref "api_common_booking_client_id_45d70a25_fk_auth_user_id":"auth_user"."id" < "booking"."client_id"

Ref "api_common_booking_flight_id_73064e8f_fk_api_common_flight_id":"flight"."id" < "booking"."flight_id"

Ref "api_common_clientgro_group_id_d4299bf5_fk_api_commo":"group"."id" < "client_groups"."group_id"

Ref "api_common_clientgroups_client_id_c7738a60_fk_auth_user_id":"auth_user"."id" < "client_groups"."client_id"

Ref "api_common_clientper_permission_id_34f5ce6d_fk_api_commo":"permission"."id" < "client_permissions"."permission_id"

Ref "api_common_clientpermissions_client_id_f3777ad3_fk_auth_user_id":"auth_user"."id" < "client_permissions"."client_id"

Ref "api_common_flight_plane_id_c4f423c3_fk_api_common_plane_id":"plane"."id" < "flight"."plane_id"

Ref "api_common_flight_track_destination_id_8ddeafff_fk_api_commo":"track"."id" < "flight"."track_destination_id"

Ref "api_common_flight_track_origin_id_b0578178_fk_api_commo":"track"."id" < "flight"."track_origin_id"

Ref "api_common_staffgroups_group_id_e0190a43_fk_api_common_group_id":"group"."id" < "staff_groups"."group_id"

Ref "api_common_staffgroups_staff_id_6f79d9e4_fk_auth_user_id":"auth_user"."id" < "staff_groups"."staff_id"

Ref "api_common_staffperm_permission_id_6bc15bf0_fk_api_commo":"permission"."id" < "staff_permissions"."permission_id"

Ref "api_common_staffpermissions_staff_id_e48541ff_fk_auth_user_id":"auth_user"."id" < "staff_permissions"."staff_id"

Ref "api_common_track_airport_id_b845c89c_fk_api_common_airport_id":"airport"."id" < "track"."airport_id"

Ref "api_common_working_flight_id_7c0c04f3_fk_api_common_flight_id":"flight"."id" < "working"."flight_id"

Ref "api_common_working_staff_id_ed5c4460_fk_auth_user_id":"auth_user"."id" < "working"."staff_id"

Ref "auth_group_permissio_permission_id_84c5c92e_fk_auth_perm":"auth_permission"."id" < "auth_group_permissions"."permission_id"

Ref "auth_group_permissions_group_id_b120cbf9_fk_auth_group_id":"auth_group"."id" < "auth_group_permissions"."group_id"

Ref "auth_permission_content_type_id_2f476e4b_fk_django_co":"django_content_type"."id" < "auth_permission"."content_type_id"

Ref "auth_user_groups_group_id_97559544_fk_auth_group_id":"auth_group"."id" < "auth_user_groups"."group_id"

Ref "auth_user_groups_user_id_6a12ed8b_fk_auth_user_id":"auth_user"."id" < "auth_user_groups"."user_id"

Ref "auth_user_user_permi_permission_id_1fbb5f2c_fk_auth_perm":"auth_permission"."id" < "auth_user_user_permissions"."permission_id"

Ref "auth_user_user_permissions_user_id_a95ead1b_fk_auth_user_id":"auth_user"."id" < "auth_user_user_permissions"."user_id"

Ref "authtoken_token_user_id_35299eff_fk_auth_user_id":"auth_user"."id" < "authtoken_token"."user_id"

Ref "cancellation_request_client_id_56b0cac9_fk_auth_user_id":"auth_user"."id" < "cancellation_request"."client_id"

Ref "cancellation_request_flight_id_78dbd6a4_fk_flight_id":"flight"."id" < "cancellation_request"."flight_id"

Ref "client_user_id_af1c5063_fk_auth_user_id":"auth_user"."id" < "client"."user_id"

Ref "django_admin_log_content_type_id_c4bce8eb_fk_django_co":"django_content_type"."id" < "django_admin_log"."content_type_id"

Ref "django_admin_log_user_id_c564eba6_fk_auth_user_id":"auth_user"."id" < "django_admin_log"."user_id"

Ref "payment_gateway_transaction_id_2e728220_fk_transaction_id":"transaction"."id" < "payment_gateway"."transaction_id"

Ref "staff_staff_type_id_8a3776c2_fk_staff_type_id":"staff_type"."id" < "staff"."staff_type_id"

Ref "staff_user_id_e6242ba6_fk_auth_user_id":"auth_user"."id" < "staff"."user_id"

Ref "transaction_booking_id_7c43ce7e_fk_booking_id":"booking"."id" < "transaction"."booking_id"

Ref "transaction_client_id_3a47ac76_fk_auth_user_id":"auth_user"."id" < "transaction"."client_id"
